--- a/css/component2.css
+++ b/css/component2.css
@@ -176,9 +176,9 @@ body {
 .csstransforms .cn-wrapper li a:hover,
 .csstransforms .cn-wrapper li a:active,
 .csstransforms .cn-wrapper li a:focus {
-	background: -webkit-radial-gradient(transparent 35%, #6a7ac8 35%);
-	background: -moz-radial-gradient(transparent 35%, #6a7ac8 35%);
-	background: radial-gradient(transparent 35%, #6a7ac8 35%);
+	background: -webkit-radial-gradient(transparent 35%, #6aa2c8 35%);
+	background: -moz-radial-gradient(transparent 35%, #6aa2c8 35%);
+	background: radial-gradient(transparent 35%, #6aa2c8 35%);
 }
 .csstransforms .cn-wrapper li a:focus {
     position: fixed; /* fix the displacement bug in webkit browsers when using tab key */
